--- a/Cp3-Cadastro/appsettings.json
+++ b/Cp3-Cadastro/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "OracleConnection": "Data Source=//oracle.fiap.com.br:1521/orcl;User Id=*****; Password=******"
+  }
+
+  //"AllowedHosts": "*"
 }
